In bugme:   * Add a handler for timer window visibility events, to raise the     window when it has been obscured (e.g. by Nautilus when it takes     over the desktop). (Trac: #324)   * Change the timer window from a popup to a normal toplevel window,     but disallowing input focus, so that it does not obscure menu     items.

--- a/bugme.glade
+++ b/bugme.glade
@@ -4,9 +4,9 @@
 <glade-interface>
 
 <widget class="GtkWindow" id="TimerWindow">
-  <property name="visible">True</property>
+  <property name="visible">False</property>
   <property name="title" translatable="yes">Athena Quickstation</property>
-  <property name="type">GTK_WINDOW_POPUP</property>
+  <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
   <property name="default_width">200</property>
@@ -18,7 +18,8 @@
   <property name="skip_pager_hint">True</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
-  <property name="focus_on_map">True</property>
+  <property name="focus_on_map">False</property>
+  <property name="accept_focus">False</property>
   <property name="urgency_hint">False</property>
 
   <child>
